# SkySim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Renderer.h  Window.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: Renderer.cpp  Window.cpp  glad.c  main.cpp
